backend UI correction

--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -16,15 +16,15 @@
 			<nav class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="/"> <i class="fa fa-shield"></i> MEAN is awesome!</a>
+					<a class="navbar-brand" href="#!/"> <i class="fa fa-shield"></i> MEAN is awesome!</a>
 				</div>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#/"><i class="fa fa-home"></i> Dashboard </a></li>
-					<li><a href="#/categories"> Manage Categories </a></li>
-					<li><a href="#/products"> Manage Products </a></li>
-					<li><a href="#/attributes"> Manage Attributes </a> </li>
-					<li><a href="#/attribute-sets"> Manage Attribute Set </a> </li>
+					<li><a href="#!/"><i class="fa fa-home"></i> Dashboard </a></li>
+					<li><a href="#!/categories"> Manage Categories </a></li>
+					<li><a href="#!/products"> Manage Products </a></li>
+					<li><a href="#!/attributes"> Manage Attributes </a> </li>
+					<li><a href="#!/attribute-sets"> Manage Attribute Set </a> </li>
 				</ul>
 			</div>
 			</nav>
