--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -19,13 +19,15 @@
 	<link rel="stylesheet" href="../bower_components/slick-carousel/slick/slick-theme.css">
 	<link rel="stylesheet" href="assets/stylesheets/star-rating.css">	
 	<link rel="stylesheet" href="assets/stylesheets/style.css">	
+	<link rel="stylesheet" href="../bower_components/ngProgress/ngProgress.css">
+
 
 </head>
 <body ng-app="sampleCartApp" zoom-container ng-controller="AppCtrl">
-	<md-progress-linear md-mode="determinate" value="{{determinateValue}}"></md-progress-linear>
+	<!-- <md-progress-linear md-mode="determinate" value="{{determinateValue}}"></md-progress-linear> -->
 
 	<div class="wrapper" >
-
+		
 		<div class="top-menu" ng-show="!fullmode" ng-controller="navCtrl">
 			<nav class="navbar navbar-default">
 			  <div class="container">
@@ -74,8 +76,7 @@
  <script src="../bower_components/elevatezoom/jquery.elevatezoom.js"></script>
  <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"> </script>
  <script src="../bower_components/slick-carousel/slick/slick.min.js"> </script>
-
-
+ <script src="../bower_components/ngProgress/build/ngprogress.js"></script>
 
 
  <script src="assets/scripts/services/index.js"> </script>
