backend UI loader

--- a/app/backend/index.html
+++ b/app/backend/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">	
 	<link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css" >
 	<link rel="stylesheet" href="assets/stylesheets/styles.css">
+	<link rel="stylesheet" href="../bower_components/ngprogress/ngProgress.css">
 </head>
 <body ng-controller="adminCtrl" ng-cloak>
 	<div class="wrapper">
@@ -46,6 +47,7 @@
  <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"> </script>
  <script src="../bower_components/ng-file-upload/ng-file-upload.min.js"></script>
  <script src="../bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
+ <script src="../bower_components/ngprogress/build/ngprogress.js"></script>
  <script src="assets/scripts/js/dirPagination.js"> </script>
  <script src="assets/scripts/services/index.js"> </script>
  <script src="assets/scripts/services/common.js"> </script>
