--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -20,10 +20,20 @@
 	<link rel="stylesheet" href="assets/stylesheets/star-rating.css">	
 	<link rel="stylesheet" href="assets/stylesheets/style.css">	
 	<link rel="stylesheet" href="../bower_components/ngprogress/ngProgress.css">
-
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-MHF6XHB');</script>
+	<!-- End Google Tag Manager -->
 
 </head>
 <body ng-app="sampleCartApp" zoom-container ng-controller="AppCtrl">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MHF6XHB"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<!-- <md-progress-linear md-mode="determinate" value="{{determinateValue}}"></md-progress-linear> -->
 
 	<div class="wrapper" >
